# aicc

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: board.cpp  main.cpp
src/board/: board.cpp  board.hpp
src/gfx/: gfx.cpp  gfx.hpp
tests/: board.cpp  gfx.cpp
